# sdl2_sampleprep_platform

./: .gitignore  README.md  pyproject.toml
settings/opentrons/: gelation_bath_workflow_0318_layout.json  solide_liquid_hs_hplc_workflow_0308_layout.json
settings/opentrons/labware/: 20mlvial_6_wellplate.json  al24wellplate_24_wellplate_15000ul.json  capfilter_24.json  filter_bin.json  hplc_plate_54.json  ikaunit.json  phunit.json  printed_24_wellplate_15000ul.json  safe_ika.json
settings/opentrons/state/: tip_tracking_1000_demo.json  tip_tracking_50_demo.json  tip_tracking_demo.json
settings/robot/: dosing_heads.json  ur3_1006_locations_converted.json
src/sdl2_solid_dose/: __init__.py
src/sdl2_solid_dose/balance/: __init__.py  balance_protocol.py
src/sdl2_solid_dose/opentrons/: __init__.py  ot_flex_protocol.py
src/sdl2_solid_dose/ph_module/: __init__.py  logger.py  socket_utils.py
src/sdl2_solid_dose/ph_module/image_req_client/: __init__.py  (+4 more)
src/sdl2_solid_dose/robot/: __init__.py  interactive_gripper_test.py  robot_control_URArm.py  test_ur_rtde_connect.py  ur5_rtde_gripper.py  vial_bal_ot_xm_1006.script
workflow/: 1000_tip.json  gelation_bath_workflow.py  gelation_bath_workflow_100ml.py  hotplate_demo.py  new_demo_otflex.py  old_demo_otflex.py  ot_flex_batch_0306.py  ot_flex_capfilter_move_demo.py  ot_flex_hs_transfer_workflow.py  ot_flex_pH_batch.py  ph_class_caller_5_8range.py  rob_dos_OT_pH_workflow.py  rob_dos_workflow.py  rob_dos_workflow_twosolids copy.py  solid_dose_demo_0319.py  solide_liquid_hs_hplc_workflow_0308.py  test.csv  test.py
(+75 files in other folders)
