[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdl2-solid-dose"
version = "0.1.0"
description = "SDL2 solid dose robotics package"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"sdl2_solid_dose.robot" = [
  "*.json",
  "*.script",
  "resources/*.json",
  "resources/solvent_library/*.json",
]
